--- a/main.css
+++ b/main.css
@@ -50,7 +50,7 @@ a {
 }
 
 footer {
-    display : block;
+    width : 100%;
     position : fixed;
     bottom : 0;
     background-color : rgb(60, 60, 60);
