--- a/main.css
+++ b/main.css
@@ -19,18 +19,19 @@ section {
     padding : 10px;
     height : 200px;
     background-color : lightgrey;
+    border-top : black 1px solid;
 }
 
 #about-our-site-icon {
     position : absolute;
     top : 0;
-    left : 0;
+    right : 0;
 }
 
-#dropdown-icon {
+#home-icon {
     position : absolute;
     top : 0;
-    right : 0;
+    left : 0;
 }
 
 a {
